Updated some unit tests. Fixed LoraRadio setup

--- a/pio-config/common-test.ini
+++ b/pio-config/common-test.ini
@@ -3,11 +3,12 @@
 [common_test]
   extends = common
   test_build_src = yes
-  test_filter = test_* 
+  test_filter = test_*
   test_framework = unity
-  build_src_filter  = +<./> +<./include> +<./include/boards>
+  build_src_filter  = +<./> +<./include> +<./src> +<./test>
 
-  build_flags = 
+  build_flags =
     ${common.build_flags}
     -std=gnu++11  ; Unity doesn't allow GNU extensions. Change from -std=c++11 to -std=gnu++11
     -DUNIT_TEST
+    -DRM_LOG_VERBOSE
