--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,11 @@
 [platformio]
 default_envs = heltec_wifi_lora_32_V3
 ;default_envs = cubecell_board_v2
-description = Wireless Adaptive Radio Protocol For Resilient Mesh Networks
+description = A toolkit for building low-power, long-range IoT mesh networks using embedded radio devices.
 extra_configs = ./pio-config/*.ini
 lib_dir = ./src
 
 [env]
-extra_scripts = post:extra_script.py
 
 [env:cubecell_board_v2]
 extends = cubecell_base
