--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 default_envs = heltec_wifi_lora_32_V3
 ;default_envs = cubecell_board_v2
-description = A toolkit for building low-power, long-range IoT mesh networks using embedded radio devices.
+description = A toolkit library for building low-power, long-range IoT mesh networks using embedded radio devices.
 extra_configs = ./pio-config/*.ini
 lib_dir = ./src
 
