Updated examples. Bumped version

--- a/examples/SensorDevice/platformio.ini
+++ b/examples/SensorDevice/platformio.ini
@@ -47,7 +47,8 @@ description = Leaf device example
       ${env:esp32.lib_deps}
       WarpNet=symlink://../../
    build_flags =
-      -DUSE_HELTEC_WIFI_LORA_32_V3
+      -std=c++17
+      -DUSE_HELTEC_WIFI_LORA_32_V3 ; This leaf device is a Heltec WiFi LoRa 32 V3
       -DUSE_DISPLAY
 
 ; LOCAL CUBECELL_BOARD_PLUS
