--- a/examples/HubDevice/platformio.ini
+++ b/examples/HubDevice/platformio.ini
@@ -43,6 +43,7 @@ description = Hub device example
    monitor_speed = 115200
    monitor_filters = time
    build_flags =
+      -std=c++17
       -DRM_LOG_DEBUG
    lib_deps =
       ${env:esp32.lib_deps}
