--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = heltec_wifi_lora_32_V3
-;default_envs = cubecell_board_v2
+;default_envs = heltec_wifi_lora_32_V3
+default_envs = cubecell_board_v2
 description = A toolkit library for building low-power, long-range IoT mesh networks using embedded radio devices.
 extra_configs = ./pio-config/*.ini
 lib_dir = ./src
