Added xiao esp32s3 board

--- a/examples/SensorDevice/platformio.ini
+++ b/examples/SensorDevice/platformio.ini
@@ -28,7 +28,8 @@ description = Leaf device example
    lib_deps =
       ${env.lib_deps}
       contrem/arduino-timer@^3.0.1
-      WIFI
+      WiFi
+      WiFiClientSecure
       WIRE
       FS
       SPI
@@ -45,11 +46,25 @@ description = Leaf device example
 
    lib_deps =
       ${env:esp32.lib_deps}
-      WarpNet=symlink://../../
+      RadioMesh=symlink://../../
    build_flags =
       -std=c++17
-      -DUSE_HELTEC_WIFI_LORA_32_V3 ; This leaf device is a Heltec WiFi LoRa 32 V3
+      -DUSE_HELTEC_WIFI_LORA_32_V3
       -DUSE_DISPLAY
+
+
+[env:local_seeed_xiao_esp32s3]
+   platform = espressif32
+   board = seeed_xiao_esp32s3
+
+   lib_deps =
+      ${env:esp32.lib_deps}
+      RadioMesh=symlink://../../
+   build_flags =
+      -std=c++17
+      -DUSE_XIAO_ESP32S3_WIO_SX1262
+      -DRM_NO_DISPLAY
+      -DRM_LOG_DEBUG
 
 ; LOCAL CUBECELL_BOARD_PLUS
 [env:local_cubecell_board_plus]
@@ -57,8 +72,8 @@ description = Leaf device example
    board = cubecell_board_plus
 
    build_flags =
-      -DWARP_NO_WIFI ; This leaf device does not have WiFi
-      -DUSE_CUBECELL_BOARD_PLUS
+      -DRM_NO_WIFI ; This leaf device does not have WiFi
+      -DUSE_CUBECELL
    lib_deps =
       ${env.lib_deps}
       WarpNet=symlink://../../
@@ -69,9 +84,9 @@ description = Leaf device example
    board = cubecell_board_v2
 
    build_flags =
-      -DWARP_NO_WIFI ; This leaf device does not have WiFi
-      -DWARP_NO_DISPLAY ; This leaf device does not have a display
-      -DUSE_CUBECELL_BOARD_V2
+      -DRM_NO_WIFI ; This leaf device does not have WiFi
+      -DRM_NO_DISPLAY ; This leaf device does not have a display
+      -DUSE_CUBECELL
    lib_deps =
       ${env.lib_deps}
       WarpNet=symlink://../../
