--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = heltec_wifi_lora_32_V3
-default_envs = cubecell_board_v2
+default_envs = heltec_wifi_lora_32_V3
+;default_envs = cubecell_board_v2
 description = A toolkit library for building low-power, long-range IoT mesh networks using embedded radio devices.
 extra_configs = ./pio-config/*.ini
 lib_dir = ./src
@@ -39,6 +39,16 @@ lib_ldf_mode = chain+
 lib_deps =
 	${esp32_base.lib_deps}
 
+
+[env:seeed_xiao_esp32s3]
+extends = esp32_base
+board = seeed_xiao_esp32s3
+lib_ldf_mode = chain+
+lib_deps =
+	${esp32_base.lib_deps}
+build_flags =
+	${esp32_base.build_flags}
+	-DRM_NO_DISPLAY
 
 [env:test_heltec_wifi_lora_32_V3]
 extends =
