Fixed a bunch of compilation/linker errors
Updated crypto implementation and examples code

--- a/examples/HubDevice/platformio.ini
+++ b/examples/HubDevice/platformio.ini
@@ -10,9 +10,14 @@
 
 [platformio]
    src_dir = .
-   default_envs = local_heltec_wifi_lora_32_V3
+   default_envs = heltec_wifi_lora_32_V3
 
 description = Hub device example
+
+; Define the RADIOMESH library versions
+[radiomesh]
+   local = symlink://../../ ; local RadioMesh library
+   release = amirna2/RadioMesh @ ^1.0.0 ; release RadioMesh library
 
 [env]
    lib_deps =
@@ -21,31 +26,28 @@ description = Hub device example
       FS
       EEPROM
 
+      ;; To use the local version of RadioMesh
+      ;; choose ${radiomesh.local} instead of ${radiomesh.release}
+      ; ${radiomesh.release}
+      ${radiomesh.local}
+
 [env:esp32]
    lib_deps =
       ${env.lib_deps}
       WiFi
       WiFiClientSecure
+      contrem/arduino-timer@^3.0.1
 
-[env:local_lib]
-   lib_deps =
-      RadioMesh=symlink://../../ ; local RadioMesh library
-
-; -------------------------------------------------------------------------------------------------------
-; ---- LOCAL ENVIRONMENTS
-; -------------------------------------------------------------------------------------------------------
-
-; LOCAL HELTEC_WIFI_LORA_32_V3
-[env:local_heltec_wifi_lora_32_V3]
+[env:heltec_wifi_lora_32_V3]
    platform = espressif32
    board = heltec_wifi_lora_32_V3
    framework = arduino
    monitor_speed = 115200
    monitor_filters = time
+
    build_flags =
       -std=c++17
       -DRM_LOG_DEBUG
+
    lib_deps =
       ${env:esp32.lib_deps}
-      ${env:local_lib.lib_deps}
-      contrem/arduino-timer@^3.0.1
