--- a/pio-config/common-test.ini
+++ b/pio-config/common-test.ini
@@ -7,6 +7,7 @@
   test_framework = unity
   build_src_filter  = +<./> +<./include> +<./src> +<./test>
 
+  build_unflags = -std=gnu++11 ; force the use of C++17
   build_flags =
     ${common.build_flags}
     -std=gnu++17  ; Unity doesn't allow GNU extensions. Change from -std=c++17 to -std=gnu++17
