--- a/pio-config/common.ini
+++ b/pio-config/common.ini
@@ -12,11 +12,12 @@
     bblanchon/ArduinoJson@^7.0.3
     https://github.com/kmackay/micro-ecc.git
 
-
+  build_unflags = -std=gnu++11 ; force the use of C++17
   build_flags =
-    -std=c++17
+    -std=gnu++17
     -Wno-missing-field-initializers
     -Wno-format
+    -Wall
     -I ./include ; top level headers
     -I ./src     ; implementation headers
 
