--- a/examples/SensorDevice/platformio.ini
+++ b/examples/SensorDevice/platformio.ini
@@ -11,11 +11,16 @@
 [platformio]
    src_dir = .
 ;; uncomment the line below to build for your board
-;   default_envs = local_heltec_wifi_lora_32_V3
-   default_envs = local_cubecell_board_v2
-;  default_envs = local_cubecell_board_plus
+;   default_envs = heltec_wifi_lora_32_V3
+   default_envs = cubecell_board_v2
+;  default_envs = cubecell_board_plus
 
-description = Leaf device example
+description = Standard device example
+
+; Define the RADIOMESH library versions
+[radio_mesh]
+   local = RadioMesh=symlink://../../ ; local RadioMesh library
+   release = amirna2/RadioMesh @ ^1.0.0 ; release RadioMesh library
 
 [env]
    framework = arduino
@@ -23,6 +28,11 @@ description = Leaf device example
    monitor_filters = time
    lib_deps =
       EEPROM
+      ;; To use the local version of RadioMesh
+      ;; choose ${radio_mesh.local} instead of ${radio_mesh.release}
+      ; ${radio_mesh.release}
+      ${radio_mesh.local}
+
 
 [env:esp32]
    lib_deps =
@@ -34,60 +44,72 @@ description = Leaf device example
       FS
       SPI
 
-
-; -------------------------------------------------------------------------------------------------------
-; ---- LOCAL ENVIRONMENTS
-; -------------------------------------------------------------------------------------------------------
-
-; LOCAL HELTEC_WIFI_LORA_32_V3
-[env:local_heltec_wifi_lora_32_V3]
+;------------------------------------------
+; Heltec WiFi LoRa 32 V3
+;------------------------------------------
+[env:heltec_wifi_lora_32_V3]
    platform = espressif32
    board = heltec_wifi_lora_32_V3
+   framework = arduino
+   monitor_speed = 115200
+   monitor_filters = time
+
+   build_unflags = -std=gnu++11
+   build_flags =
+      -std=gnu++17
+      -DUSE_HELTEC_WIFI_LORA_32_V3
+      -DRM_LOG_DEBUG
 
    lib_deps =
       ${env:esp32.lib_deps}
-      RadioMesh=symlink://../../
-   build_flags =
-      -std=c++17
-      -DUSE_HELTEC_WIFI_LORA_32_V3
-      -DUSE_DISPLAY
 
-
-[env:local_seeed_xiao_esp32s3]
+;------------------------------------------
+; Seeed Xiao ESP32-S3
+;------------------------------------------
+[env:seeed_xiao_esp32s3]
    platform = espressif32
    board = seeed_xiao_esp32s3
 
    lib_deps =
       ${env:esp32.lib_deps}
-      RadioMesh=symlink://../../
+
+   build_unflags = -std=gnu++11
    build_flags =
-      -std=c++17
+      -std=gnu++17
       -DUSE_XIAO_ESP32S3_WIO_SX1262
-      -DRM_NO_DISPLAY
+      -DRM_NO_DISPLAY ; This device does not have a display
       -DRM_LOG_DEBUG
 
-; LOCAL CUBECELL_BOARD_PLUS
-[env:local_cubecell_board_plus]
+;------------------------------------------
+; Heltec CubeCell Board Plus
+;------------------------------------------
+[env:cubecell_board_plus]
    platform = https://github.com/HelTecAutomation/heltec-cubecell.git
    board = cubecell_board_plus
 
+   build_unflags = -std=gnu++11
    build_flags =
-      -DRM_NO_WIFI ; This leaf device does not have WiFi
+      -std=gnu++17
+      -DRM_NO_WIFI ; This device does not have WiFi
+      -DRM_LOG_DEBUG
       -DUSE_CUBECELL
    lib_deps =
       ${env.lib_deps}
-      WarpNet=symlink://../../
       arduino-timer=symlink://../../lib/arduino-timer
 
-[env:local_cubecell_board_v2]
+;------------------------------------------
+; Heltec CubeCell Board V2
+;------------------------------------------
+[env:cubecell_board_v2]
    platform = https://github.com/HelTecAutomation/heltec-cubecell.git
    board = cubecell_board_v2
 
+   build_unflags = -std=gnu++11
    build_flags =
-      -DRM_NO_WIFI ; This leaf device does not have WiFi
-      -DRM_NO_DISPLAY ; This leaf device does not have a display
+      -std=gnu++17
+      -DRM_NO_WIFI ; This device does not have WiFi
+      -DRM_NO_DISPLAY ; This  device does not have a display
       -DUSE_CUBECELL
    lib_deps =
       ${env.lib_deps}
-      WarpNet=symlink://../../
       arduino-timer=symlink://../../lib/arduino-timer
