compile out portal code if no wifi

--- a/examples/HubDevice/platformio.ini
+++ b/examples/HubDevice/platformio.ini
@@ -10,34 +10,42 @@
 
 [platformio]
    src_dir = .
-   default_envs = heltec_wifi_lora_32_V3
+;; uncomment the line below to build for your board
+;   default_envs = heltec_wifi_lora_32_V3
+   default_envs = seeed_xiao_esp32s3
 
-description = Hub device example
+description = A Hub device example with captive portal
 
 ; Define the RADIOMESH library versions
-[radiomesh]
-   local = symlink://../../ ; local RadioMesh library
+[radio_mesh]
+   local = RadioMesh=symlink://../../ ; local RadioMesh library
    release = amirna2/RadioMesh @ ^1.0.0 ; release RadioMesh library
 
 [env]
+   framework = arduino
+   monitor_speed = 115200
+   monitor_filters = time
    lib_deps =
-      WIRE
-      SPI
-      FS
       EEPROM
-
       ;; To use the local version of RadioMesh
-      ;; choose ${radiomesh.local} instead of ${radiomesh.release}
-      ; ${radiomesh.release}
-      ${radiomesh.local}
+      ;; choose ${radio_mesh.local} instead of ${radio_mesh.release}
+      ; ${radio_mesh.release}
+      ${radio_mesh.local}
+
 
 [env:esp32]
    lib_deps =
       ${env.lib_deps}
+      contrem/arduino-timer@^3.0.1
       WiFi
       WiFiClientSecure
-      contrem/arduino-timer@^3.0.1
+      WIRE
+      FS
+      SPI
 
+;------------------------------------------
+; Heltec WiFi LoRa 32 V3
+;------------------------------------------
 [env:heltec_wifi_lora_32_V3]
    platform = espressif32
    board = heltec_wifi_lora_32_V3
@@ -45,9 +53,29 @@ description = Hub device example
    monitor_speed = 115200
    monitor_filters = time
 
+   lib_deps =
+      ${env:esp32.lib_deps}
+
+   build_unflags = -std=gnu++11
    build_flags =
-      -std=c++17
+      -std=gnu++17
+      -DUSE_HELTEC_WIFI_LORA_32_V3
       -DRM_LOG_DEBUG
+
+
+;------------------------------------------
+; Seeed Xiao ESP32-S3
+;------------------------------------------
+[env:seeed_xiao_esp32s3]
+   platform = espressif32
+   board = seeed_xiao_esp32s3
 
    lib_deps =
       ${env:esp32.lib_deps}
+
+   build_unflags = -std=gnu++11
+   build_flags =
+      -std=gnu++17
+      -DUSE_XIAO_ESP32S3_WIO_SX1262
+      -DRM_NO_DISPLAY ; This device does not have a display
+      -DRM_LOG_DEBUG
