--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ lib_dir = ./src
 extends = cubecell_base
 board = cubecell_board_v2
 lib_ldf_mode = chain+
-build_src_filter = +<*> -<wifi> -<oled_display>
+build_src_filter = +<*> -<wifi> -<oled_display> -<captive_portal>
 lib_deps =
    ${common.lib_deps}
 	${cubecell_base.lib_deps}
