added missing deps

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,7 @@ board = heltec_wifi_lora_32_V3
 lib_ldf_mode = chain+
 lib_deps =
 	${esp32_base.lib_deps}
+    olikraus/U8g2@^2.36.2
 
 
 [env:seeed_xiao_esp32s3]
