Add captive portal support (#21)
* Applied clang-format
* Adding captive portal (WIP)
* Added portal example and bidirection callbacks
* Added chat example

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ lib_dir = ./src
 extends = cubecell_base
 board = cubecell_board_v2
 lib_ldf_mode = chain+
-build_src_filter = +<*> -<wifi> -<oled_display>
+build_src_filter = +<*> -<wifi> -<oled_display> -<captive_portal>
 lib_deps =
    ${common.lib_deps}
 	${cubecell_base.lib_deps}
@@ -38,6 +38,7 @@ board = heltec_wifi_lora_32_V3
 lib_ldf_mode = chain+
 lib_deps =
 	${esp32_base.lib_deps}
+    olikraus/U8g2@^2.36.2
 
 
 [env:seeed_xiao_esp32s3]
@@ -49,6 +50,7 @@ lib_deps =
 build_flags =
 	${esp32_base.build_flags}
 	-DRM_NO_DISPLAY
+	-fPIC
 
 [env:test_heltec_wifi_lora_32_V3]
 extends =
