validated inclusion message flow

--- a/examples/DeviceInclusion/MiniHub/platformio.ini
+++ b/examples/DeviceInclusion/MiniHub/platformio.ini
@@ -11,14 +11,14 @@
 [platformio]
    src_dir = .
 ;; uncomment the line below to build for your board
-;   default_envs = heltec_wifi_lora_32_V3
-   default_envs = seeed_xiao_esp32s3
+   default_envs = heltec_wifi_lora_32_V3
+;   default_envs = seeed_xiao_esp32s3
 
 description = A Hub device example with captive portal
 
 ; Define the RADIOMESH library versions
 [radio_mesh]
-   local = RadioMesh=symlink://../../ ; local RadioMesh library
+   local = RadioMesh=symlink://../../../ ; local RadioMesh library
    release = amirna2/RadioMesh @ ^1.0.0 ; release RadioMesh library
 
 [env]
@@ -61,7 +61,6 @@ description = A Hub device example with captive portal
       -std=gnu++17
       -DUSE_HELTEC_WIFI_LORA_32_V3
       -DRM_LOG_DEBUG
-
 
 ;------------------------------------------
 ; Seeed Xiao ESP32-S3
