added unit tests
Signed-off-by: Amir Nathoo <amirna2@users.noreply.github.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,3 +68,17 @@ extends =
 board = ${env:cubecell_board_v2.board}
 lib_deps =
 	${cubecell_base.lib_deps}
+
+[env:test_seeed_xiao_esp32s3]
+extends =
+	esp32_base
+	common_test
+board = seeed_xiao_esp32s3
+lib_ldf_mode = chain+
+lib_deps =
+	${esp32_base.lib_deps}
+build_flags =
+	${esp32_base.build_flags}
+	${common_test.build_flags}
+	-DRM_NO_DISPLAY
+	-fPIC
