--- a/examples/DeviceInclusion/MiniHub/platformio.ini
+++ b/examples/DeviceInclusion/MiniHub/platformio.ini
@@ -27,6 +27,7 @@ description = A Hub device example with captive portal
    monitor_filters = time
    lib_deps =
       EEPROM
+      bblanchon/ArduinoJson@^7.0.0
       ;; To use the local version of RadioMesh
       ;; choose ${radio_mesh.local} instead of ${radio_mesh.release}
       ; ${radio_mesh.release}
