--- a/examples/DeviceInclusion/MiniHub/platformio.ini
+++ b/examples/DeviceInclusion/MiniHub/platformio.ini
@@ -27,6 +27,7 @@ description = A Hub device example with captive portal
    monitor_filters = time
    lib_deps =
       EEPROM
+      bblanchon/ArduinoJson@^7.0.0
       ;; To use the local version of RadioMesh
       ;; choose ${radio_mesh.local} instead of ${radio_mesh.release}
       ; ${radio_mesh.release}
@@ -76,6 +77,5 @@ description = A Hub device example with captive portal
    build_flags =
       -std=gnu++17
       -DUSE_XIAO_ESP32S3_WIO_SX1262
-      -DUSE_WIFI_AP
       -DRM_NO_DISPLAY ; This device does not have a display
       -DRM_LOG_DEBUG
