renamed captive portal to device portal
Signed-off-by: Amir Nathoo <amirna2@users.noreply.github.com>

--- a/examples/DeviceInclusion/MiniHub/platformio.ini
+++ b/examples/DeviceInclusion/MiniHub/platformio.ini
@@ -14,7 +14,7 @@
    default_envs = heltec_wifi_lora_32_V3
 ;   default_envs = seeed_xiao_esp32s3
 
-description = A Hub device example with captive portal
+description = A Hub device example with device portal
 
 ; Define the RADIOMESH library versions
 [radio_mesh]
